### 4.0.46A - bug-fix: right alignment of the buttons

--- a/src/app/components/message-attachment/message-attachment.component.scss
+++ b/src/app/components/message-attachment/message-attachment.component.scss
@@ -1,6 +1,6 @@
 #buttons-in-message {
-    display: flex; 
-    float: right;
+    text-align: right;
+    display: block; 
     margin-top: -6px;
     margin-bottom: 20px;
     height: auto;
@@ -8,7 +8,7 @@
 
     .div-button {
         // float: left;
-        float: right; 
+        display: inline-block;
     }
     
     .button-success{
